--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
 	<link rel="dns-prefetch" href="//s7.addthis.com" />
 	<link rel="dns-prefetch" href="https://d3levm2kxut31z.cloudfront.net" />
 
-
+<meta name="alexaVerifyID" content="6Nc4ZVWkSlU1BhNk3AnFc6TEoaU"/>
 
 	<meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
