--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,8 @@
 
 
 
-
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script>
 /* Back to Top */
 jQuery(document).ready(function(){var offset=220;var duration=500;jQuery(window).scroll(function(){if(jQuery(this).scrollTop()>offset){jQuery('.back-to-top').fadeIn(duration)}else{jQuery('.back-to-top').fadeOut(duration)}});jQuery('.back-to-top').click(function(event){event.preventDefault();jQuery('html, body').animate({scrollTop:0},duration);return false})});
