--- a/_includes/header.html
+++ b/_includes/header.html
@@ -62,7 +62,7 @@
 	</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lato:100,300,700,300italic,700italic">
     <link rel="stylesheet" href="/assets/css/general.css">
 
@@ -73,25 +73,6 @@
 
     <!-- RSS -->
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-
-<!-- Roost.me -->
-<script>
-    var _roost = _roost || [];
-    _roost.push(['appkey','680649fa48fb4091a7db291820b1a3c2']);
-
-    !function(d,s,id){
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if(!d.getElementById(id)){
-            js=d.createElement(s); js.id=id;
-            js.src='//get.roost.me/js/roost.js';
-            fjs.parentNode.insertBefore(js,fjs);
-        }
-    }(document, 'script', 'roost-js');
-</script>
-
   </head>
 <body>
 
