--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,6 @@
 	<link rel="dns-prefetch" href="//plus.google.com" />
 	<link rel="dns-prefetch" href="//fonts.googleapis.com" />
 	<link rel="dns-prefetch" href="//disqus.com" />
-	<link rel="dns-prefetch" href="//s7.addthis.com" />
-	<link rel="dns-prefetch" href="https://d3levm2kxut31z.cloudfront.net" />
 
 <meta name="alexaVerifyID" content="6Nc4ZVWkSlU1BhNk3AnFc6TEoaU"/>
 
@@ -22,7 +20,7 @@
 	<!-- Google -->
     <link rel="author" href="https://plus.google.com/105951994557667533128">
     <meta name="author" content="Brandon Hubbard">
-    <link rel="canonical" href="http://brandonhubbard.com{{ page.url }}">
+    <link rel="canonical" href="https://brandonhubbard.com{{ page.url }}">
     <meta name="description" content="{{ page.description }}">
 
 	<!-- Open Graph -->
@@ -42,16 +40,7 @@
 	<meta name="twitter:image:width" content="600">
 	<meta name="twitter:image:height" content="600">
 
-	<!--
-	<meta name="twitter:player" content="">
-	<meta name="twitter:player:width" content="435">
-	<meta name="twitter:player:height" content="251">
-	<meta name="twitter:player:stream" content="">
-	<meta name="twitter:player:stream:content_type" content="video/mp4; codecs="avc1.42E01E1, mpa.40.2"">
-	-->
 
-
-	<link href="http://gmpg.org/xfn/11" rel="profile">
 
     <title>
     {% if page.title %}
