--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us" xmlns:fb="http://ogp.me/ns/fb#">
+<html lang="en-us" prefix="og: http://ogp.me/ns#">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
@@ -8,14 +8,11 @@
 	<link rel="dns-prefetch" href="//fonts.googleapis.com" />
 	<link rel="dns-prefetch" href="//disqus.com" />
 
-<meta name="alexaVerifyID" content="6Nc4ZVWkSlU1BhNk3AnFc6TEoaU"/>
+	<meta name="alexaVerifyID" content="6Nc4ZVWkSlU1BhNk3AnFc6TEoaU"/>
 
 	<meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-	<!-- OpenID -->
-	{% include openid.html %}
 
 	<!-- Google -->
     <link rel="author" href="https://plus.google.com/105951994557667533128">
