--- a/_includes/opengraph.html
+++ b/_includes/opengraph.html
@@ -1,4 +1,5 @@
 	<meta property="og:image" content="">
+	<meta property="fb:admins" content="30513051" />
 	<meta property="og:title" content="{% if page.title %}{{ page.title }} &middot; {{ site.title }}{% else %}{{ site.title }} &middot; {{ site.tagline }}{% endif %}">
 	<meta property="og:site_name" content="Brandon Hubbard">
 	<meta property="og:url" content="http://brandonhubbard.com{{ page.url }}">
