--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
 {% else %}
 {% assign canonical = page.url|remove:'index.html' %}
 {% endif %}
-<link rel="canonical" href="{{ site.url }}{{ canonical }}">
+<link rel="canonical" href="https://brandonhubbard.com{{ canonical }}">
 
 	<!-- Open Graph -->
 	{% include opengraph.html %}
