--- a/_includes/opengraph.html
+++ b/_includes/opengraph.html
@@ -15,11 +15,11 @@
   <meta content="{{ site.description }}" property="og:description">
 {% endif %}
 {% if page.url %}
-  <meta content="{{ site.url }}{{ page.url }}" property="og:url">
+  <meta content="https://brandonhubbard.com{{ canonical }}" property="og:url">
 {% endif %}
 {% if page.date %}
   <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
-  <meta content="{{ site.url }}/about/" property="article:author">
+  <meta content="https://brandonhubbard.com/about/" property="article:author">
 {% endif %}
 {% if page.image %}
   <meta content="/img/srcset/{{ page.image }}" property="og:image">
