--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,17 @@
 	  <h2>Comments</h2>
 	  <noscript>To view comments you must have javascript turned on.</noscript>
       <div id="disqus_thread"></div>
+      
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Blog -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6567838737973180"
+     data-ad-slot="9350817528"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	   </div>
 	  </div>
 	  </div>
