--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,8 @@
 <html lang="en-us" prefix="og: http://ogp.me/ns#">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
 
     <link rel="dns-prefetch" href="//www.gravatar.com" />
 	<link rel="dns-prefetch" href="//plus.google.com" />
